--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ background-size: cover; */
 .footer {
    padding: 2rem 0;
    margin-top: 3rem;
-   background-color: #4a4a4a;
+   background-color: #212121;
 
    color: #ffffff;
 }
