--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,33 @@
 
   color: #ffffff;
   text-align: center;
-}
+
+   @media (max-width: 1199px){
+      .display-2 {
+         font-size: 3.5rem;
+      }
+   }
+
+   @media (max-width: 991px){
+      .display-2 {
+         font-size: 3rem;
+      }
+   }
+
+   @media (max-width: 767px){
+      height: 300px;
+
+      .display-2 {
+         font-size: 2rem;
+      }
+   }
+ }
+
+
 /* background-image: url("bg.jpg");
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover; */
-
 .main {
   margin-top: 3rem;
 }
@@ -34,6 +55,7 @@ background-size: cover; */
    padding: 2rem 0;
    margin-top: 3rem;
    background-color: #212121;
+   background-position: center;
 
    color: #ffffff;
 }
